--- a/index.html
+++ b/index.html
@@ -28,5 +28,16 @@
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
     </script>
+    <script>
+      var database = firebase.database();
+      
+      function writeUserData(userId, name, email, imageUrl) {
+        database().ref('users/' + userId).set({
+        username: name,
+        email: email,
+        profile_picture : imageUrl
+  });
+}
+    </script>
   </body>
 </html>
