--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         var user = prompt("What should we call you?");
         var password = prompt("What password?);
         var profilePic = prompt("Image url for profile:");
-        writeUserData(userId, user, password, profilePic)
+        writeUserData(userId, user, password, profilePic);
       }
       
     </script>
