--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
   // ...
 });
       }
-      
+      ReactDOM.render(
+        <h1>Hello, world!</h1>,
+        document.getElementById('root')
+);
     </script>
   </body>
 </html>
